# test

./: .buildinfo  .bumpversion.cfg  MANIFEST.in  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  python_boilerplate.html  run.py  search.html  searchindex.js  setup.cfg  setup.py
_modules/: index.html
_modules/python_boilerplate/: cli.html
_sources/: python_boilerplate.rst.txt
docs/: .gitignore  conf.py  index.rst
python_boilerplate/: __init__.py  cli.py
tests/: __init__.py  test_python_boilerplate.py
