[metadata]
name = python-boilerplate
version = 0.1.0
description = Python Boilerplate contains all the boilerplate you need to create a Python package.
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/python-boilerplate
license = MIT license
keywords = python-boilerplate
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[flake8]
exclude = docs

[aliases]
test = pytest
